--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
   margin: 0 auto;
   padding: 1.5rem;
   text-align: center;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
 .logo {
